replace long by integer

--- a/_includes/1.0/api/account.html
+++ b/_includes/1.0/api/account.html
@@ -18,7 +18,7 @@
         </thead>
         <tbody>
             <tr>
-                |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} | | id | Code | {{ site.format.type.long }} | | | number | Number | {{ site.format.type.string64 }} | | | name | Name | {{ site.format.type.string128 }} | | | is_family | The kind of account | {{ site.format.type.boolean }} | false: Detail account true: Family account | | family_id | Code of this account's family | {{ site.format.type.long }} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = true only) |
+                |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} | | id | Code | {{ site.format.type.integer +}} | | | number | Number | {{ site.format.type.string64 }} | | | name | Name | {{ site.format.type.string128 }} | | | is_family | The kind of account | {{ site.format.type.boolean }} | false: Detail account true: Family account | | family_id | Code of this account's family | {{ site.format.type.integer +}} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = true only) |
 
 
         </tbody>
