--- a/_includes/1.0/api/tax.html
+++ b/_includes/1.0/api/tax.html
@@ -19,7 +19,7 @@
         <tbody>
             <tr>
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.long }} |
+| id | Code | {{ site.format.type.integer +}} |
 | name | Name | {{ site.format.type.string }} |
 | rate | Rate | {{ site.format.type.double }} |
 
