--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -19,9 +19,9 @@
         <tbody>
             <tr>
                |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} |
-| id | Code | {{ site.format.type.long }} |  |
+| id | Code | {{ site.format.type.integer }} |  |
 | name | Name | {{ site.format.type.string64 }} |  |
-| type | Describe the kind of unit | {{ site.format.type.long }} | 1: Piece
+| type | Describe the kind of unit | {{ site.format.type.integer }} | 1: Piece
 2: Weight
 3: Dimension
 4: Surface
