--- a/_includes/1.0/api/paymentterm.html
+++ b/_includes/1.0/api/paymentterm.html
@@ -20,7 +20,7 @@
             <tr>
 
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.long }} |
+| id | Code | {{ site.format.type.integer +}} |
 | name | Name | {{ site.format.type.string64 }} |
 </tr>
 
