--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -20,7 +20,7 @@
             <tr>
             
 |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.integer +}} |
+| id | Code | {{ site.format.type.integer }} |
 | iso_code | Iso Code of this currency (ISO 4217) | {{ site.format.type.string4 }} |
 | name | Name | {{ site.format.type.string64 }} |
 | main_currency | Is this currency the main accounting for this domain | {{ site.format.type.boolean }} |
