--- a/_includes/1.0/api/account.html
+++ b/_includes/1.0/api/account.html
@@ -4,26 +4,49 @@
     <h3 id="accountjsonformat">JSON Format</h3>
     <p>Accounts are represented as JSON objects which have the following keys:</p>
 
-
     <table class="table table-bordered table-striped">
         <thead>
-            <tr>
-                <th class="name">{{ site.format.header.field_name }}</th>
-                <th class="type">{{ site.format.header.type }}</th>
-                <th class="values">{{ site.format.header.values }}</th>
-                <th class="default">{{ site.format.header.default }}</th>
-                <th class="non_editable">{{ site.format.header.non_editable }}</th>
-                <th class="description">{{ site.format.header.description }}</th>
-            </tr>
+            {% include table-header.html %}
         </thead>
         <tbody>
             <tr>
-                |_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |_. {{ site.format.header.values }} | | id | Code | {{ site.format.type.integer }} | | | number | Number | {{ site.format.type.string64 }} | | | name | Name | {{ site.format.type.string128 }} | | | is_family | The kind of account | {{ site.format.type.boolean }} | false: Detail account true: Family account | | family_id | Code of this account's family | {{ site.format.type.integer }} | IDs from "Accounts":/docs/1.0/api/accounts/#accounts_get (isFamily = true only) |
-
-
+                <td>id</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>Automatically assigned</td>
+            </tr>
+            <tr>
+                <td>number</td>
+                <td>{{ site.format.type.string }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Number of this account</td>
+            </tr>
+            <tr>
+                <td>name</td>
+                <td>{{ site.format.type.string }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Name of this account</td>
+            </tr>
+            <tr>
+                <td>is_family</td>
+                <td>{{ site.format.type.boolean }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>Is this account a family account.</td>
+            </tr>
+            <tr>
+                <td>family_id</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>Code of this account's family</td>
+            </tr>
         </tbody>
-    </table>
-
+    </table>  
+ 
     <h3 id="accountjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/account.json %} {% endhighlight %}
 
