--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -4,30 +4,42 @@
     <h3 id="currencyjsonformat">JSON Format</h3>
     <p>Currencies are represented as JSON objects which have the following keys:</p>
 
-
     <table class="table table-bordered table-striped">
         <thead>
-            <tr>
-                <th class="name">{{ site.format.header.field_name }}</th>
-                <th class="type">{{ site.format.header.type }}</th>
-                <th class="values">{{ site.format.header.values }}</th>
-                <th class="default">{{ site.format.header.default }}</th>
-                <th class="non_editable">{{ site.format.header.non_editable }}</th>
-                <th class="description">{{ site.format.header.description }}</th>
-            </tr>
+            {% include table-header.html %}
         </thead>
         <tbody>
             <tr>
-            
-|_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.integer }} |
-| iso_code | Iso Code of this currency (ISO 4217) | {{ site.format.type.string4 }} |
-| name | Name | {{ site.format.type.string64 }} |
-| main_currency | Is this currency the main accounting for this domain | {{ site.format.type.boolean }} |
-</tr>
-
+                <td>id</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>Automatically assigned</td>
+            </tr>
+            <tr>
+                <td>iso_code</td>
+                <td>{{ site.format.type.string4 }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The ISO code of the currency <a href="http://www.iso.org/iso/catalogue_detail?csnumber=46121" target="_blank" title="ISO 4217">(ISO 4217)</a>
+                </td>
+            </tr>
+            <tr>
+                <td>name</td>
+                <td>{{ site.format.type.string64 }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Currency Name</td>
+            </tr>
+            <tr>
+                <td>main_currency</td>
+                <td>{{ site.format.type.boolean }}</td>
+                <td>no</td>
+                <td>no</td>
+                <td>Is this currency the main accounting for this domain</td>
+            </tr>
         </tbody>
-    </table>
+    </table> 
 
     <h3 id="currencyjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/currency.json %} {% endhighlight %}
