--- a/_includes/1.0/api/paymentterm.html
+++ b/_includes/1.0/api/paymentterm.html
@@ -4,29 +4,28 @@
     <h3 id="paymenttermjsonformat">JSON Format</h3>
     <p>Payment Terms are represented as JSON objects which have the following keys:</p>
 
-
     <table class="table table-bordered table-striped">
         <thead>
-            <tr>
-                <th class="name">{{ site.format.header.field_name }}</th>
-                <th class="type">{{ site.format.header.type }}</th>
-                <th class="values">{{ site.format.header.values }}</th>
-                <th class="default">{{ site.format.header.default }}</th>
-                <th class="non_editable">{{ site.format.header.non_editable }}</th>
-                <th class="description">{{ site.format.header.description }}</th>
-            </tr>
+            {% include table-header.html %}
         </thead>
         <tbody>
             <tr>
-
-|_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.integer }} |
-| name | Name | {{ site.format.type.string64 }} |
-</tr>
-
+                <td>id</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>Automatically assigned</td>
+            </tr>
+            <tr>
+                <td>name</td>
+                <td>{{ site.format.type.string }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Payment Term Name</td>
+            </tr>
         </tbody>
-    </table>
-
+    </table>  
+ 
     <h3 id="paymenttermjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/paymentterm.json %} {% endhighlight %}
 
