--- a/_includes/1.0/api/tax.html
+++ b/_includes/1.0/api/tax.html
@@ -3,32 +3,34 @@
     <h2>Taxes</h2>
     <h3 id="taxjsonformat">JSON Format</h3>
     <p>Taxes are represented as JSON objects which have the following keys:</p>
-
-
     <table class="table table-bordered table-striped">
         <thead>
-            <tr>
-                <th class="name">{{ site.format.header.field_name }}</th>
-                <th class="type">{{ site.format.header.type }}</th>
-                <th class="values">{{ site.format.header.values }}</th>
-                <th class="default">{{ site.format.header.default }}</th>
-                <th class="non_editable">{{ site.format.header.non_editable }}</th>
-                <th class="description">{{ site.format.header.description }}</th>
-            </tr>
+            {% include table-header.html %}
         </thead>
         <tbody>
             <tr>
-|_. {{ site.format.header.field_name }} |_. {{ site.format.header.description }} |_. {{ site.format.header.type }} |
-| id | Code | {{ site.format.type.integer }} |
-| name | Name | {{ site.format.type.string }} |
-| rate | Rate | {{ site.format.type.double }} |
-
-</tr>
-
-
+                <td>id</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>Automatically assigned</td>
+            </tr>
+            <tr>
+                <td>name</td>
+                <td>{{ site.format.type.string }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Tax Name</td>
+            </tr>
+            <tr>
+                <td>rate</td>
+                <td>{{ site.format.type.double }}</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>The Tax Rate</td>
+            </tr>
         </tbody>
-    </table>
-
+    </table>  
     <h3 id="taxjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/tax.json %} {% endhighlight %}
 
