all the APIs are using the new table format

--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -80,7 +80,7 @@
                 <td>{{ site.format.type.contact }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>An array containing the contacts of the customers</td>
+                <td>An array containing the contacts of the customer</td>
             </tr>
             <tr>
                 <td>payment_terms_id</td>
