remove StringXX use only String

--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -56,21 +56,21 @@
             </tr>
             <tr>
                 <td>phone_number</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The phone number of this customer</td>
             </tr>
             <tr>
                 <td>email</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The Email address of this customer</td>
             </tr>
             <tr>
                 <td>website</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The URL of the customer's website</td>
@@ -93,7 +93,7 @@
             </tr>
             <tr>
                 <td>currency_iso_code</td>
-                <td>{{ site.format.type.string4 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The ISO Code of one of <a href="/docs/1.0/api/currency/" title="">your Currencies</a>
@@ -110,7 +110,7 @@
             </tr>
             <tr>
                 <td>user_code</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The number assigned to this customer (i.e. CUS-002). If you don't specify a customer number, it will be automatically generated</td>
@@ -144,7 +144,7 @@
         <tbody>
             <tr>
                 <td>company_name</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
                 <td>The name of the company</td>
@@ -158,14 +158,14 @@
             </tr>
             <tr>
                 <td>taxpayer_id_number</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The Taxpayer ID Number</td>
             </tr>
             <tr>
                 <td>siret</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The Siret number</td>
@@ -184,21 +184,21 @@
         <tbody>
             <tr>
                 <td>first_name</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The First Name of the customer</td>
             </tr>
             <tr>
                 <td>last_name</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
                 <td>The Last Name of the customer</td>
             </tr>
             <tr>
                 <td>middle_name</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
                 <td>The Middle Name of the customer</td>
