--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -19,14 +19,14 @@
             </tr>
             <tr>
                 <td>name</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
                 <td>The Unit Name</td>
             </tr>
             <tr>
                 <td>type</td>
-                <td>{{ site.format.type.string255 }}</td>
+                <td>{{ site.format.type.integer }}</td>
                 <td>no</td>
                 <td>yes</td>
                 <td>Describe the kind of unit
