--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <td>iso_code</td>
-                <td>{{ site.format.type.string4 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
                 <td>The ISO code of the currency <a href="http://www.iso.org/iso/catalogue_detail?csnumber=46121" target="_blank" title="ISO 4217">(ISO 4217)</a>
@@ -26,7 +26,7 @@
             </tr>
             <tr>
                 <td>name</td>
-                <td>{{ site.format.type.string64 }}</td>
+                <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
                 <td>The Currency Name</td>
