add the description of the nested elements

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -164,5 +164,17 @@
                 </li>
             </ul>
         </li>
+        <!-- nested elements -->
+        <li>
+            <a href="#nestedelements">Nested elements</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#address">Address</a>
+                </li>
+                <li><a href="#contact">Contact</a>
+                </li>
+                <li><a href="#entry">Transaction Entry</a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </li>
