Add endpoint for each resources

--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -1,6 +1,9 @@
 <div id="currency" class="group">
 
     <h2>Currencies</h2>
+    {% highlight bash %}
+    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.currencies.url}}
+    {% endhighlight %}
     <h3 id="currencyjsonformat">JSON Format</h3>
     <p>Currencies are represented as JSON objects which have the following keys:</p>
 
