--- a/_includes/1.0/api/productservicefamily.html
+++ b/_includes/1.0/api/productservicefamily.html
@@ -1,6 +1,9 @@
 <div id="productservicefamily" class="group">
 
     <h2>Products and Services Families</h2>
+    {% highlight bash %}
+    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.item_families.url}}
+    {% endhighlight %}
     <h3 id="productservicefamilyjsonformat">JSON Format</h3>
     <p>Products and Services Families are represented as JSON objects which have the following keys:</p>
 
