--- a/_includes/1.0/api/tax.html
+++ b/_includes/1.0/api/tax.html
@@ -1,6 +1,9 @@
 <div id="tax" class="group">
 
     <h2>Taxes</h2>
+    {% highlight bash %}
+    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.taxes.url}}
+    {% endhighlight %}
     <h3 id="taxjsonformat">JSON Format</h3>
     <p>Taxes are represented as JSON objects which have the following keys:</p>
     <table class="table table-bordered table-striped">
