--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -1,6 +1,9 @@
 <div id="unit" class="group">
 
     <h2>Units</h2>
+    {% highlight bash %}
+    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.units.url}}
+    {% endhighlight %}
     <h3 id="unitjsonformat">JSON Format</h3>
     <p>Units are represented as JSON objects which have the following keys:</p>
 
