--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {% include head.html %}  
-    </head>
-    <body>  
-    <img src="/img/beta.gif" class="ribbon" alt="beta"/>
+
+<head>
+    {% include head.html %}
+</head>
+
+<body>
+    <img src="/img/beta.gif" class="ribbon" alt="beta" />
     <div id="wrapper">
         <!--Nav Bar -->
-        <nav class="bs-docs-sidebar"  role="navigation">
+        <nav class="bs-docs-sidebar" role="navigation">
             <a class="logo" href="/">
-                <img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="myERP"/>Developers
+                <img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="myERP" />Developers
             </a>
             <ul id="sidebar" class="nav nav-stacked fixed">
                 {% include side-menu.html %}
             </ul>
-            <div class="love">Made with ♥<br /> by the myERP Team</div>
+            <div class="love">Made with ♥
+                <br />by the myERP Team</div>
         </nav>
         <!--Main Content -->
         <div class="page-content-wrapper">
             <div class="container-fluid">
-                    {{ content }}
+                {{ content }}
             </div>
         </div>
-    </body>
+        <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-19359313-18', 'auto');
+        ga('send', 'pageview');
+        </script>
+</body>
+
 </html>
