describe the available methods for each resources

--- a/_includes/1.0/api/methods/full.html
+++ b/_includes/1.0/api/methods/full.html
@@ -1,7 +1,30 @@
-<ul>
-    <li>Create</li>
-    <li>Update</li>
-    <li>Delete</li>
-    <li>Find</li>
-    <li>Find All</li>
-</ul>
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th class="type">HTTP Verb</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>GET</td>
+            <td>Retrieve a resource, you have to specify an id</td>
+        </tr>
+        <tr>
+            <td>PUT</td>
+            <td>Update a resource, you have to specify an id</td>
+        </tr>
+        <tr>
+            <td>DELETE</td>
+            <td>Delete a resource, you have to specify an id</td>
+        </tr>
+        <tr>
+            <td>POST</td>
+            <td>Create a resource</td>
+        </tr>
+        <tr>
+            <td>GET</td>
+            <td>Retrieve the list of resources</td>
+        </tr>
+    </tbody>
+</table>
