--- a/_includes/1.0/api/transaction.html
+++ b/_includes/1.0/api/transaction.html
@@ -64,5 +64,30 @@
     {% highlight bash %} {% include 1.0/api/json/transaction.json %} {% endhighlight %}
 
     <h3 id="transactionavailablemethods">Available Methods</h3>
-    {% include 1.0/api/methods/readonly.html %}
+    <table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th class="type">HTTP Verb</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>GET</td>
+            <td>Retrieve a resource, you have to specify an id</td>
+        </tr>
+        <tr>
+            <td>DELETE</td>
+            <td>Delete a resource, you have to specify an id</td>
+        </tr>
+        <tr>
+            <td>POST</td>
+            <td>Create a resource</td>
+        </tr>
+        <tr>
+            <td>GET</td>
+            <td>Retrieve the list of resources</td>
+        </tr>
+    </tbody>
+</table>
 </div>
