update glossary links

--- a/_includes/1.0/overview/glossary.html
+++ b/_includes/1.0/overview/glossary.html
@@ -36,17 +36,17 @@
                     <tr id="address">
                         <td> <b>Address</b> 
                         </td>
-                        <td>In the API, Addresses got their own JSON format. Cick "here":/docs/1.0/api/address/#format for further details.</td>
+                        <td>In the API, Addresses got their own JSON format. Click <a href="/docs/1.0/api/#address" title="">here</a> for further details.</td>
                     </tr>
-                    <tr id="order_line">
+                    <!-- <tr id="order_line">
                         <td> <b>Order Line</b> 
                         </td>
                         <td>In the API, Order Lines got their own JSON format, and share it for Estimate, "Sales Orders":/docs/1.0/api/sales_order/#sales_order_format, Invoices, etc... Cick "here":/docs/1.0/api/order_line/#format for further details.</td>
-                    </tr>
+                    </tr> -->
                     <tr id="entry">
                         <td> <b>Entry</b> 
                         </td>
-                        <td>Entries are the main content of any "Transaction":/docs/1.0/api/transaction/#transaction_format. They mostly define the amount of the transaction (rounded to two decimal places). They are not editable. Cick "here":/docs/1.0/api/entry/#format for further details.</td>
+                        <td>Entries are the main content of any <a href="/docs/1.0/api/#transaction" title="">Transaction</a>. They mostly define the amount of the transaction (rounded to two decimal places). They are not editable. Click <a href="/docs/1.0/api/#entry" title="">here</a> for further details.</td>
                     </tr>
         </tbody>
     </table>
